# RenderingSandbox

./: CMakeLists.txt  README.md  main.cpp  main.qml
src/: appmanager.cpp  appmanager.h  drawmanager.cpp  drawmanager.h  triangle.cpp  triangle.h  trianglestruct.cpp  trianglestruct.h
